add a few words

--- a/programming/javascript/console.html
+++ b/programming/javascript/console.html
@@ -49,7 +49,7 @@ console.warn("You probably shouldn't do that.")
 
 <section>
     <h2>Making an Informational Console Message</h2>
-    <p>In addition to errors and warnings, we can also make informational messages using the <code>console.info()</code> function. For example: </p>
+    <p>In addition to errors and warnings, we can also make informational messages in the console using the <code>console.info()</code> function. For example: </p>
     <pre><code class="language-javascript">
 console.info("Your response was recorded.")
     </code></pre>
