--- a/programming/javascript/jquery/more-on-selecting.html
+++ b/programming/javascript/jquery/more-on-selecting.html
@@ -5,3 +5,4 @@ layout: jquery
 ---
 
 <h1>More On Selecting</h1>
+<p>In the last tutorial, we learned the basics of selecting elements with jQuery. Now, we will dive a bit deeper and write more code!</p>
