--- a/programming/javascript/jquery/more-on-selecting.html
+++ b/programming/javascript/jquery/more-on-selecting.html
@@ -9,5 +9,5 @@ layout: jquery
 
 <section>
     <h2>Code Demo</h2>
-    <p></p>
+    <p>To explain the concepts in this tutorial, we will write some example code. The code will be as follows:</p>
 </section>
