fix typo whoops :|

--- a/programming/javascript/jquery/more-on-selecting.html
+++ b/programming/javascript/jquery/more-on-selecting.html
@@ -23,5 +23,5 @@ $(document).ready(function(){
     });
 });
     </code></pre>
-    <p>And then, add the following couple of lines into your <code>index.html</code> dile:</p>
+    <p>And then, add the following couple of lines into your <code>index.html</code> file:</p>
 </section>
