html code example

--- a/programming/javascript/jquery/more-on-selecting.html
+++ b/programming/javascript/jquery/more-on-selecting.html
@@ -24,4 +24,9 @@ $(document).ready(function(){
 });
     </code></pre>
     <p>And then, add the following couple of lines into your <code>index.html</code> file:</p>
+    <pre><code class="language-html">
+&#60;p&#62;hi&#60;/p&#62;
+&#60;div id="p"&#62;hi&#60;/div&#62;
+&#60;div class="p"&#62;hi&#60;/div&#62;
+    </code></pre>
 </section>
