add code result section

--- a/programming/javascript/jquery/more-on-selecting.html
+++ b/programming/javascript/jquery/more-on-selecting.html
@@ -30,3 +30,8 @@ $(document).ready(function(){
 &#60;div class="p"&#62;hi&#60;/div&#62;
     </code></pre>
 </section>
+
+<section>
+    <h2>Code Result</h2>
+    <p>After running your code and opening the HTML page, you'll notice something similar to what we had in the previous tutorial, but if you click on a line of text, it will change to something depending on what it is (a <code>p</code> tag, a <code>div</code> tag with and id of <code>p</code>, or a <code>div</code> tag with a class of <code>p</code>). So, now, let's uncover the mysteries behind this example!</p>
+</section>
