--- a/programming/javascript/alerts.html
+++ b/programming/javascript/alerts.html
@@ -32,7 +32,7 @@ console.log(confirm("Are you sure you want to do this?"))
     <img src="/images/programming/javascript/confirm-alert-example.png" alt="An example of a confirmation alert in JavaScript">
     <p>Click "OK". Now, go into the console. You should see <code>true</code>.</p>
     <p>If you do it again and click "Cancel", you should now see <code>false</code>.</p>
-    <p>Just like normal alerts, you should not overuse confirmation alerts. They do not allow the user to interact with the page until they click "OK" or "Cancel".</p>
+    <p>However, just like normal alerts, you should not overuse confirmation alerts. They do not allow the user to interact with the page until they click "OK" or "Cancel".</p>
 </section>
 
 <section>
