add demo button

--- a/programming/javascript/alerts.html
+++ b/programming/javascript/alerts.html
@@ -19,6 +19,8 @@ alert("Hello World!")
     </code></pre>
     <p>You should see something like: </p>
     <img src="/images/programming/javascript/alert-example.png" alt="An example of a JavaScript alert" style="height:125px">
+    <p>You can also view the demo alert by pressing the button:</p>
+    <button onClick="alert('Hello World!')">See Alert</button>
 </section>
 
 <section>
