--- a/programming/javascript/jquery/more-on-selecting.html
+++ b/programming/javascript/jquery/more-on-selecting.html
@@ -35,3 +35,11 @@ $(document).ready(function(){
     <h2>Code Result</h2>
     <p>After running your code and opening the HTML page, you'll notice something similar to what we had in the previous tutorial, but if you click on a line of text, it will change to something depending on what it is (a <code>p</code> tag, a <code>div</code> tag with and id of <code>p</code>, or a <code>div</code> tag with a class of <code>p</code>). So, now, let's uncover the mysteries behind this example!</p>
 </section>
+
+<section>
+    <h2>What Goes In The <code>$</code> Function</h2>
+    <p>In the previous examples, we had a couple of <i>strings</i> that we <i>passed into</i> the <code>$</code> function.</p>
+    <p>The first one was <code>"p"</code>, and if you're familiar with CSS selectors, then you'd know that just a <code>p</code> means a p <i>tag</i>.</p>
+    <p>We also had <code>"#p"</code>, and with CSS selectors, it means something with an <i>id</i> of <code>p</code> (represented by the hashtag). So, this would "influence" or <code>div</code> with the <code>p</code> tag.</p>
+    <p>And finally, we had <code>".p"</code>, which is anything with a <i>class</i> of <code>p</code>, denoted by the period. So, this affects our <code>div</code> with the class of <code>p</code>.</p>
+</section>
