--- a/programming/javascript/jquery/more-on-selecting.html
+++ b/programming/javascript/jquery/more-on-selecting.html
@@ -43,3 +43,8 @@ $(document).ready(function(){
     <p>We also had <code>"#p"</code>, and with CSS selectors, it means something with an <i>id</i> of <code>p</code> (represented by the hashtag). So, this would "influence" or <code>div</code> with the <code>p</code> tag.</p>
     <p>And finally, we had <code>".p"</code>, which is anything with a <i>class</i> of <code>p</code>, denoted by the period. So, this affects our <code>div</code> with the class of <code>p</code>.</p>
 </section>
+
+<section>
+    <h2>Other Selectors</h2>
+    <p></p>
+</section>
