add other selectors

--- a/programming/javascript/jquery/more-on-selecting.html
+++ b/programming/javascript/jquery/more-on-selecting.html
@@ -46,5 +46,17 @@ $(document).ready(function(){
 
 <section>
     <h2>Other Selectors</h2>
-    <p></p>
+    <p>We already learned that jQuery selectors are the same as CSS selectors. Here are a few more examples:</p>
+    <ul>
+        <li><code>ul li.hello</code>: selects all list items within an unordered list that have a class of <code>hello</code></li>
+        <li><code>#code</code>: selects all elements with an id of <code>code</code></li>
+        <li><code>.navbar</code>: selects all elements with a class of <code>navbar</code></li>
+        <li><code>a</code>: selects all links (tag of <code>a</code>)</li>
+        <li><code>[href]</code>: selects all elements with an attribute of <code>href</code></li>
+        <li><code>ul li:first-child</code>: selects the first element of every unordered list</li>
+        <li><code>*</code>: selects all elements</li>
+        <li><code>p:first</code>: selects the first <code>&#60;p&#62;</code> tag</li>
+        <li><code>a[target='_blank']</code>: selects all links with the attribute <code>target</code> set to <code>_blank</code></li>
+        <li><code>a[target!='_blank']</code>: selects all links with the attribute <code>target</code> NOT set to <code>_blank</code></li>
+    </ul>
 </section>
