remove stuff we don't have in the tutorial index

--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -22,18 +22,18 @@ layout: default
             <li><a href="/programming/javascript/">JavaScript</a>
                 <ul>
                     <li><a href="/programming/javascript/jquery/">jQuery</a></li>
-                    <li><a href="/programming/javascript/react/">React</a></li>
+                    <!--<li><a href="/programming/javascript/react/">React</a></li>
                     <li><a href="/programming/javascript/angular/">Angular</a></li>
-                    <li><a href="/programming/javascript/vue/">Vue</a></li>
+                    <li><a href="/programming/javascript/vue/">Vue</a></li>-->
                 </ul>
             </li>
             <li><a href="/programming/cpp/">C++</a></li>
-            <li><a href="/programming/java/">Java</a></li>
+            <!--<li><a href="/programming/java/">Java</a></li>-->
             <li><a href="/programming/git/">Git</a></li>
             <li><a href="/programming/jekyll/">Jekyll</a></li>
         </ul>
     </li>
-    <li><a href="/math/">Math</a>
+    <!--<li><a href="/math/">Math</a>
         <ul>
             <li><a href="/math/arithmetic/">Arithmetic</a></li>
             <li><a href="/math/algebra/">Algebra</a></li>
@@ -45,6 +45,6 @@ layout: default
             <li><a href="/math/probability/">Probability</a></li>
             <li><a href="/math/calculus/">Calculus</a></li>
         </ul>
-    </li>
+    </li>-->
 </ul>
 
