--- a/programming/jekyll/index.html
+++ b/programming/jekyll/index.html
@@ -9,12 +9,13 @@ layout: jekyll
 <section>
     <h2>What is Jekyll?</h2>
     <p>Jekyll is a static site generator, which means we can write HTML, but without all the hassle. Using Jekyll, we can do things like use layouts and includes so we don't have to repeat ourselves, fancy templating for ease, and more. Jekyll is built using Ruby but you don't need any knowledge of Ruby to follow along.</p>
+    <img src="/images/programming/jekyll/jekyll-logo.png" alt="Jekyll's Logo">
 </section>
 
 <section>
     <h2>Why use Jekyll?</h2>
     <p>First of all, you can use Jekyll to make websites that only require static content. It has quite advanced templating features and has built in blogging support. Another big advantage of Jekyll is that it works well with <a href="https://pages.github.com">GitHub Pages</a>, which is basically free hosting provided by GitHub.</p>
-    <p>In fact, Learnmonkey uses Jekyll. We chose it because it works well with GitHub Pages and it's templating.</p>
+    <p>In fact, Learnmonkey uses Jekyll. We chose it because it works well with GitHub Pages and we didn't have to constantly repeat ourselves while writing our content or write a complicated script to do the same thing.</p>
 </section>
 
 <section>
