update tutorial index

--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -10,6 +10,7 @@ layout: default
         <ul>
             <li><a href="/programming/python/">Python</a>
                 <ul>
+                    <li><a href="/programming/python/cool-projects/">Cool Python Projects</a></li>
                     <li><a href="/programming/python/flask/">Flask</a></li>
                     <li><a href="/programming/python/pygame/">Pygame</a></li>
                     <li><a href="/programming/python/tkinter/">Tkinter</a></li>
