--- a/programming/python/cool-projects/1-number-guessing.html
+++ b/programming/python/cool-projects/1-number-guessing.html
@@ -11,3 +11,8 @@ permalink: /programming/python/cool-projects/1-number-guessing/
     <h2>The <code>random</code> module</h2>
     <p>In order to gnerate or random numbers, we need to use the built-in Python module <code>random</code>. It's used for generating random data, such as random integers and choosing random elements from a list.</p>
 </section>
+
+<section>
+    <h2>Generating Random Numbers</h2>
+    <p>In the <code>random</code> module, we have a useful function called <code>randint</code> which takes two parameters (two numbers), <code>a</code> and <code>b</code>, and generates a random integer (whole number) between them inclusive. So, for example, I could run <code>randint(5, 10)</code> and get <code>5</code>, <code>6</code>, <code>7</code>, <code>8</code>, <code>9</code>, or <code>10</code>. This is what we are going to use in our game.</p>
+</section>
