--- a/programming/python/cool-projects/1-number-guessing.html
+++ b/programming/python/cool-projects/1-number-guessing.html
@@ -16,3 +16,19 @@ permalink: /programming/python/cool-projects/1-number-guessing/
     <h2>Generating Random Numbers</h2>
     <p>In the <code>random</code> module, we have a useful function called <code>randint</code> which takes two parameters (two numbers), <code>a</code> and <code>b</code>, and generates a random integer (whole number) between them inclusive. So, for example, I could run <code>randint(5, 10)</code> and get <code>5</code>, <code>6</code>, <code>7</code>, <code>8</code>, <code>9</code>, or <code>10</code>. This is what we are going to use in our game.</p>
 </section>
+
+<section>
+    <h2>Using <code>randint</code></h2>
+    <p>We've already discussed how <code>randint</code> works, so now let's implement our game!</p>
+    <p>before we start using <code>randint</code> and the <code>random</code> module, we'll need to import it. We can simply do this by writing</p>
+    <pre><code class="language-python">import random</code></pre>
+    <p>After, we can access the <code>randint</code> function using <code>random.randint</code>.</p>
+    <p>So, therefore, we can generate a random number between 1 and 100 using</p>
+    <pre><code class="language-python">num = random.randint(1, 100)</code></pre>
+    <p>We save the number into the variable <code>num</code> for use in our game</p>
+</section>
+
+<section>
+    <h2>Implementing The Game</h2>
+    <p></p>
+</section>
