--- a/programming/python/cool-projects/index.html
+++ b/programming/python/cool-projects/index.html
@@ -5,4 +5,4 @@ permalink: /programming/python/cool-projects/
 ---
 
 <h1>Cool Python Projects</h1>
-<p>Bored? Looking for some ideas? You've come to the right place! Here, we create tutorials on sorts of projects: games, APIS, web scraping, generating passwords, you name it! Organized from easiest to most advanced, there easy to do, modify, and customize on your own!</p>
+<p>Bored? Looking for some ideas? You've come to the right place! Here, we create tutorials on sorts of projects: games, APIs, web scraping, generating passwords, you name it! Organized from easiest to most advanced, there easy to do, modify, and customize on your own!</p>
