--- a/programming/python/cool-projects/1-number-guessing.html
+++ b/programming/python/cool-projects/1-number-guessing.html
@@ -5,11 +5,11 @@ permalink: /programming/python/cool-projects/1-number-guessing/
 ---
 
 <h1>Number Guessing Game</h1>
-<p>In this tutorial, we'll create a simple number guessing game that will have the user guess a number between 1 and 100. It'll run in the console so we don't need to make a <i>UI</i>, or User Interface. It's pretty simple to create, recommended for beginners.</p>
+<p>In this tutorial, we'll create a simple number guessing game that will have the user guess a number between 1 and 100. Our guessing game will run in the command line, so we are making a command line interface (CLI).</p>
 
 <section>
     <h2>The <code>random</code> module</h2>
-    <p>In order to gnerate or random numbers, we need to use the built-in Python module <code>random</code>. It's used for generating random data, such as random integers and choosing random elements from a list.</p>
+    <p>In order to generate or random numbers, we need to use the built-in Python module <code>random</code>. It's used for generating random data, such as random integers and choosing random elements from a list.</p>
 </section>
 
 <section>
@@ -63,5 +63,6 @@ while True:
         <li>Allow the player to replay after guessing the number</li>
         <li>Add a points system</li>
         <li>Let the user quit in the game</li>
+        <li>Make a version of the game using a graphical user interface</li>
     </ul>
 </section>
