--- a/programming/python/cool-projects/2-counter-app.html
+++ b/programming/python/cool-projects/2-counter-app.html
@@ -11,4 +11,5 @@ permalink: /programming/python/cool-projects/2-counter-app/
     <h2>The Tkinter Module</h2>
     <p>In this tutorial, we'll be using the Tkinter module for making graphical user interfaces (GUIs). In the last project, where we made a number guessing game, we put our game in the command line, so we made a command line interface (CLIs).</p>
     <p>Tkinter is a built in Python module for creating GUIs. Although the apps that Tkinter makes aren't the prettiest, they are a good starting point and is very beginner-friendly.</p>
+    <p>If you want to learn more about the Tkinter module and all of its features, check out the <a href="/programming/python/tkinter/">Tkinter tutorial series</a> on Learnmonkey.</p>
 </section>
