--- a/programming/python/cool-projects/1-number-guessing.html
+++ b/programming/python/cool-projects/1-number-guessing.html
@@ -5,7 +5,7 @@ permalink: /programming/python/cool-projects/1-number-guessing/
 ---
 
 <h1>Number Guessing Game</h1>
-<p>In this tutorial, we'll create a simple number guessing game that will have the user guess a number between 1 and 100. Our guessing game will run in the command line, so we are making a command line interface (CLI).</p>
+<p>In this tutorial, we'll create a simple number guessing game that will have the user guess a number between 1 and 100. Our guessing game will run in the command line, so we are making a <i>command line interface</i> (CLI).</p>
 
 <section>
     <h2>The <code>random</code> module</h2>
