--- a/programming/python/cool-projects/1-number-guessing.html
+++ b/programming/python/cool-projects/1-number-guessing.html
@@ -20,7 +20,7 @@ permalink: /programming/python/cool-projects/1-number-guessing/
 <section>
     <h2>Using <code>randint</code></h2>
     <p>We've already discussed how <code>randint</code> works, so now let's implement our game!</p>
-    <p>before we start using <code>randint</code> and the <code>random</code> module, we'll need to import it. We can simply do this by writing</p>
+    <p>But, before we start using <code>randint</code> and the <code>random</code> module, we'll need to import it. We can simply do this by writing</p>
     <pre><code class="language-python">import random</code></pre>
     <p>After, we can access the <code>randint</code> function using <code>random.randint</code>.</p>
     <p>So, therefore, we can generate a random number between 1 and 100 using</p>
