--- a/programming/python/cool-projects/3-simple-autoclicker.html
+++ b/programming/python/cool-projects/3-simple-autoclicker.html
@@ -6,3 +6,8 @@ permalink: /programming/python/cool-projects/3-simple-autoclicker/
 
 <h1>Simple Autoclicker</h1>
 <p>In this tutorial, we will be using Python to create a simple autoclicker program, or a program that clicks (the mouse) for us.</p>
+
+<section>
+    <h2>Installing The Needed Modules/Libraries</h2>
+    <p></p>
+</section>
