--- a/programming/python/cool-projects/3-simple-autoclicker.html
+++ b/programming/python/cool-projects/3-simple-autoclicker.html
@@ -9,5 +9,5 @@ permalink: /programming/python/cool-projects/3-simple-autoclicker/
 
 <section>
     <h2>Installing The Needed Modules/Libraries</h2>
-    <p></p>
+    <p>In order for us to create our autoclicker, </p>
 </section>
