add install section

--- a/programming/python/cool-projects/3-simple-autoclicker.html
+++ b/programming/python/cool-projects/3-simple-autoclicker.html
@@ -9,5 +9,8 @@ permalink: /programming/python/cool-projects/3-simple-autoclicker/
 
 <section>
     <h2>Installing The Needed Modules/Libraries</h2>
-    <p>In order for us to create our autoclicker, </p>
+    <p>In order for us to create our autoclicker, we'll need to install a couple of Python libraries using <code>pip</code>. To do so, you can open your command prompt/terminal and type the following commands:</p>
+    <pre><code>pip install pyautogui
+pip install keyboad</code></pre>
+    <p>If the commands don't work for you, go <a href="/programming/python/articles/troubleshooting-pip/">here</a>.</p>
 </section>
