--- a/programming/python/cool-projects/3-simple-autoclicker.html
+++ b/programming/python/cool-projects/3-simple-autoclicker.html
@@ -10,7 +10,7 @@ permalink: /programming/python/cool-projects/3-simple-autoclicker/
 <section>
     <h2>Installing The Needed Modules/Libraries</h2>
     <p>In order for us to create our autoclicker, we'll need to install a couple of Python libraries using <code>pip</code>. To do so, you can open your command prompt/terminal and type the following commands:</p>
-    <pre><code>pip install pyautogui
-pip install keyboard</code></pre>
+    <code>pip install pyautogui<br>
+pip install keyboard</code>
     <p>If the commands don't work for you, go <a href="/programming/python/articles/troubleshooting-pip/">here</a>.</p>
 </section>
