--- a/programming/python/f-strings.html
+++ b/programming/python/f-strings.html
@@ -5,7 +5,7 @@ permalink: /programming/python/f-strings/
 ---
 
 <h1>Python F-Strings</h1>
-<p>F-strings were introduced in Python 3.6 as an improved way of formatting strings and string concatenation. Before f-strings, we would either have to concatenate a bunch of strings or use the <code>format()</code> method. Both of them aren't particularly elegant. So, f-strings were made. Using them is similar to using the <code>format()</code> method, but everything is more concise. For example, instead of writing: </p>
+<p>F-strings were introduced in Python 3.6 as an improved way of formatting strings and string concatenation. Before f-strings, we would either have to concatenate a bunch of strings using the plus sign (<code>+</code>) or use the <code>str.format()</code> method. Both of them aren't particularly elegant. So, f-strings were made as a feature to fix both of them. Using them is similar to using the <code>format()</code> method, but everything is more concise. For example, instead of writing: </p>
 <pre><code class="language-python">
 name = "John"
 age = 36
