--- a/programming/python/pymongo/index.html
+++ b/programming/python/pymongo/index.html
@@ -1,10 +1,10 @@
 ---
 layout: pymongo
-title: Introduction to Pymongo
+title: Introduction to PyMongo
 permalink: /programming/python/pymongo/
 ---
 
-<h1>Introduction to Pymongo</h1>
+<h1>Introduction to PyMongo</h1>
 
 <section>
     <h2>What is MongoDB?</h2>
@@ -12,6 +12,6 @@ permalink: /programming/python/pymongo/
 </section>
 
 <section>
-    <h2>What is Pymongo?</h2>
+    <h2>What is PyMongo?</h2>
     <p></p>
 </section>
