put my stuff back

--- a/programming/python/pymongo/index.html
+++ b/programming/python/pymongo/index.html
@@ -8,7 +8,7 @@ permalink: /programming/python/pymongo/
 
 <section>
     <h2>What is MongoDB?</h2>
-    <p>Before we can understand what PyMongo is, we need to understand what MongoDB is.</p>
+    <p>Before we can understand what PyMongo is, we need to understand what MongoDB is. MongoDB is a database where you can store your JSON documents without any schema, which makes it very flexible and scalable.</p>
 </section>
 
 <section>
