--- a/programming/python/pymongo/index.html
+++ b/programming/python/pymongo/index.html
@@ -9,9 +9,10 @@ permalink: /programming/python/pymongo/
 <section>
     <h2>What is MongoDB?</h2>
     <p>Before we can understand what PyMongo is, we need to understand what MongoDB is. MongoDB is a database where you can store your JSON documents without any schema, which makes it very flexible and scalable.</p>
+    <img src="/images/programming/python/pymongo/mongodb-logo.png" alt="MongoDB's Logo">
 </section>
 
 <section>
     <h2>What is PyMongo?</h2>
-    <p></p>
+    <p>PyMongo is a Python module which allows us to connect to MongoDB and use it in our Python applications.</p>
 </section>
