--- a/programming/python/cool-projects/3-simple-autoclicker.html
+++ b/programming/python/cool-projects/3-simple-autoclicker.html
@@ -44,5 +44,5 @@ while True:
 
 <section>
     <h2>Code Breakdown</h2>
-    <p>The program is actually very simply</p>
+    <p>The program is actually very simple</p>
 </section>
