--- a/programming/python/cool-projects/3-simple-autoclicker.html
+++ b/programming/python/cool-projects/3-simple-autoclicker.html
@@ -44,5 +44,5 @@ while True:
 
 <section>
     <h2>Code Breakdown</h2>
-    <p>The program is actually very simple.</p>
+    <p>The program is actually very simple. We use a <code>while</code> loop for the main code and check if the user is holding the key bind key. If they are, we are going to click the mouse. S</p>
 </section>
