--- a/programming/python/cool-projects/3-simple-autoclicker.html
+++ b/programming/python/cool-projects/3-simple-autoclicker.html
@@ -44,5 +44,18 @@ while True:
 
 <section>
     <h2>Code Breakdown</h2>
-    <p>The program is actually very simple. We use a <code>while</code> loop for the main code and check if the user is holding the key bind key. If they are, we are going to click the mouse. S</p>
+    <p>The program is actually very simple. We use a <code>while</code> loop for the main code and check if the user is holding the key bind key. If they are, we are going to click the mouse. Since we have a <code>while</code> loop, the code will run infinitely, so we are able to hold the <code>c</code> key and have the code click!</p>
+</section>
+
+<section>
+    <h2>Extensions</h2>
+    <p>Fun extension ideas:</p>
+    <ul>
+        <li>Give the use a limited number of guesses</li>
+        <li>Add a feature for hints on the number (even or odd, etc.)</li>
+        <li>Allow the player to replay after guessing the number</li>
+        <li>Add a points system</li>
+        <li>Let the user quit in the game</li>
+        <li>Make a version of the game using a graphical user interface</li>
+    </ul>
 </section>
