--- a/programming/python/cool-projects/1-number-guessing.html
+++ b/programming/python/cool-projects/1-number-guessing.html
@@ -59,7 +59,7 @@ while True:
     <h2>Extensions</h2>
     <p>Fun extension ideas:</p>
     <ul>
-        <li>Give the use a limited number of guesses</li>
+        <li>Give the user a limited number of guesses</li>
         <li>Add a feature for hints on the number (even or odd, etc.)</li>
         <li>Allow the player to replay after guessing the number</li>
         <li>Add a points system</li>
