--- a/programming/python/cool-projects/3-simple-autoclicker.html
+++ b/programming/python/cool-projects/3-simple-autoclicker.html
@@ -51,11 +51,7 @@ while True:
     <h2>Extensions</h2>
     <p>Fun extension ideas:</p>
     <ul>
-        <li>Give the use a limited number of guesses</li>
-        <li>Add a feature for hints on the number (even or odd, etc.)</li>
-        <li>Allow the player to replay after guessing the number</li>
-        <li>Add a points system</li>
-        <li>Let the user quit in the game</li>
-        <li>Make a version of the game using a graphical user interface</li>
+        <li>Allow the user to press a key to start the code and press that key again to release the key, so they don't need to hold the key.</li>
+        <li>Allow the code to <i>thread</i> itself, or create multiple instances of itself to achieve a higher CPS.</li>
     </ul>
 </section>
