--- a/programming/python/pymongo/setup.html
+++ b/programming/python/pymongo/setup.html
@@ -15,7 +15,7 @@ permalink: /programming/python/pymongo/setup/
     <h2>Installing PyMongo</h2>
     <p>After making our database, we need to install the PyMongo Python module using PIP: </p>
     <pre><code class="language-bat">
-python -m pip install pymongo
+pip install pymongo
     </code></pre>
     <p>After using PIP, run the following Python code to test if you installed it correctly: </p>
     <pre><code class="language-python">
