--- a/programming/python/cool-projects/4-trivia-game.html
+++ b/programming/python/cool-projects/4-trivia-game.html
@@ -1,8 +1,8 @@
 ---
 layout: python-cool-projects
-title: Python Counter App
+title: Python Trivia Game
 permalink: /programming/python/cool-projects/4-trivia-game/
 ---
 
-<h1>Trivia Game</h1>
+<h1>Python Trivia Game</h1>
 <p></p>
