--- a/programming/golang/input.html
+++ b/programming/golang/input.html
@@ -10,3 +10,18 @@ layout: golang
     <h2>What is Input?</h2>
     <p>In this tutorial, we will be discussing Go functions which you can use to input stuff into your program, specifically command line input.</p>
 </section>
+
+<section>
+    <h2>The <code>Scan()</code> function</h2>
+    <p>The <code>Scan()</code> function, as well as all the other functions we will be discussing in this tutorial, is in the built-in <code>fmt</code> module, so we need to type <code>import "fmt"</code> before using these functions.</p>
+</section>
+
+<section>
+    <h2>The <code>Scanln()</code> function</h2>
+    <p></p>
+</section>
+
+<section>
+    <h2>The <code>Scanf()</code> function</h2>
+    <p></p>
+</section>
