--- a/programming/golang/input.html
+++ b/programming/golang/input.html
@@ -14,14 +14,18 @@ layout: golang
 <section>
     <h2>The <code>Scan()</code> function</h2>
     <p>The <code>Scan()</code> function, as well as all the other functions we will be discussing in this tutorial, is in the built-in <code>fmt</code> module, so we need to type <code>import "fmt"</code> before using these functions.</p>
+    <p>The <code>Scan()</code> function receives raw user input as space-seperated values and stores them in variables. Newlines count as spaces. For example: </p>
+    <pre><code class="language-go">
+
+    </code></pre>
 </section>
 
 <section>
     <h2>The <code>Scanln()</code> function</h2>
-    <p></p>
+    <p>The <code>Scanln()</code> function is like <code>Scan()</code>, but it stops scanning for inputs at newlines. For example: </p>
 </section>
 
 <section>
     <h2>The <code>Scanf()</code> function</h2>
-    <p></p>
+    <p>The <code>Scanf()</code> function is similar to the <code>Printf()</code> function. The <code>Scanf()</code> function uses a pre-defined format for the input and stores in the variables.</p>
 </section>
