--- a/programming/golang/more-on-printing.html
+++ b/programming/golang/more-on-printing.html
@@ -41,5 +41,5 @@ layout: golang
 
 <section>
 	<h2>The <code>fmt.Printf</code> function</h2>
-	<p></p>
+	<p>The <code>Printf()</code> function uses a pre-defined format for the output, in which we can put variables.</p>
 </section>
