add quick sentence

--- a/programming/python/cool-projects/2-counter-app.html
+++ b/programming/python/cool-projects/2-counter-app.html
@@ -37,6 +37,7 @@ window.mainloop()
     <p>When you run it, you should see something like: </p>
     <img src="/images/programming/python/cool-projects/counter-app.png" alt="Screenshot of the Tkinter counter app">
     <p>If you click the button, you should see the count above the button increase by one.</p>
+    <p>You can also find the code <a href="https://github.com/calgary34/tkinter-button-counter">here</a>.</p>
 </section>
 
 <section>
